--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ I was graduated from Université PS, under the supervision of Professor KS</a>.
 </p>
 
 <p>
-<h1 style="font-size: 1.5rem">Publications and preprints: </h1>
+<h1>Publications and preprints: </h1>
 </p>
 
 <ul>
